--- a/Heart_disease_prediction.ipynb
+++ b/Heart_disease_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "aba0e472-7d21-4872-8ee0-6df625e1254f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "1a030436-779d-4896-99ca-2b3737fb0d6c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "a0a7747f-2df1-404f-9d18-263d7c9d3e4b",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "4              0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "fee2cdbf-0111-4254-97f3-fdde848ba2a4",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "(303, 14)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "e2767694-2476-4f29-8745-1f7cccafae54",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "418603c7-2b5e-4b8f-bd73-7c943319824b",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "17f15974-c4da-4f9e-a4bd-a877d8e1c950",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "b8dd8e59-feab-4227-9f67-ea0a583124b2",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "75ae3012-aaf8-4486-bd83-59b03c0928a4",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "7cd4404e-355a-4662-89bd-352a8b828f7c",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "f2a8db21-5731-44c8-9d08-ca8a51c79899",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "d69d73e3-2bfc-4a1c-9bba-72c2a7db8dad",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "e12d76e3-2e63-4c2e-9587-fb48efe3496c",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "015b31a9-000e-4a45-96d6-cebf17cb2c7a",
    "metadata": {},
    "outputs": [],
@@ -400,17 +400,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "d6d5861f-4645-4192-88a7-2f654e8cf66f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.preprocessing import StandardScaler\n",
-    "# scaler = StandardScaler()\n",
-    "# X_train = scaler.fit_transform(X_train)\n",
-    "# X_test = scaler.transform(X_test)\n",
-    "mean = np.mean(X_train,axis=0)\n",
-    "std = np.std(X_train,axis=0)"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "# mean = np.mean(X_train,axis=0)\n",
+    "# std = np.std(X_train,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5eec9f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(scaler,open('scaler.pkl','wb'))"
    ]
   },
   {
@@ -432,7 +443,7 @@
     }
    ],
    "source": [
-    "std"
+    "# std"
    ]
   },
   {
@@ -453,7 +464,7 @@
     }
    ],
    "source": [
-    "std[std==0]"
+    "# std[std==0]"
    ]
   },
   {
@@ -463,8 +474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = (X_train - mean) / std\n",
-    "X_test = (X_test - mean) / std"
+    "# X_train = (X_train - mean) / std\n",
+    "# X_test = (X_test - mean) / std"
    ]
   },
   {
@@ -1242,9 +1253,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
